ARIES-218
git-svn-id: https://svn.apache.org/repos/asf/incubator/aries/trunk@919575 13f79535-47bb-0310-9956-ffa450edef68